# motores

./: .env  .gitignore  pyproject.toml
src/: manage.py
src/apps/assets/: __init__.py  admin.py  apps.py  models.py  signals.py
src/apps/assets/migrations/: 0001_initial.py  0002_remove_motor_marca_marcamotor_modelomotor_and_more.py  0003_alter_motor_horas_totais_and_more.py  0004_motor_blowby_motor_modelo_filtro_ar_and_more.py  0005_periferico_motor_qtd_alternadores_and_more.py  0006_remove_motor_blowby_motor_qtd_blowby.py  0007_sistemaarrefecimento_sistemaoleo_and_more.py  0008_alter_sistemaarrefecimento_options_and_more.py  0009_alter_posicaocomponente_hora_motor_instalacao.py  0010_delete_periferico_delete_sistemaarrefecimento_and_more.py  0011_periferico_motor_qtd_bypass_motor_qtd_compensadores_and_more.py  0012_remove_posicaocomponente_motor_and_more.py  0013_delete_posicaocomponente.py  0014_alter_marcamotor_options_alter_modelomotor_options_and_more.py  0015_equipamento.py  0016_alter_equipamento_options_and_more.py
src/apps/components/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
src/apps/components/migrations/: 0001_initial.py  0002_grupocomponente_delete_periferico_delete_sistemaoleo_and_more.py  0003_menufiltros_menuignicao_menuoleo_menuoutros_and_more.py  (+6 more)
src/apps/core/: admin.py  models.py
src/apps/inventory/: admin.py  models.py
src/apps/maintenance/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
src/config/: urls.py  wsgi.py
src/config/settings/: base.py
src/static/js/: manutencao.js  mascaras.js
(+21 files in other folders)
